INT-319 | Fix center alignment for category sliders on Japan HP

--- a/homepage/front/styles/app.scss
+++ b/homepage/front/styles/app.scss
@@ -40,9 +40,9 @@ $desktop: new-breakpoint(min-width 500px);
 section {
 	@include outer-container;
 	clear: both;
-	margin-bottom: 3em;
-	padding-left: 3em;
-	padding-right: 3em;
+	margin-bottom: 54px;
+	padding-left: 54px;
+	padding-right: 54px;
 	// workaround for broken z-index in safari
 	transform: translate3d(0, 0, 0);
 
